--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ hyper = { version = "0.14.16", features = ["full"] }
 tokio = { version = "1.14.0", features = ["full"] }
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.41"
+prometheus = { version = "0.13.0", features = ["process"] }
 tracing = "0.1.11"
 tracing-subscriber = "0.1.6"
 
