--- a/ext/pitemp.service
+++ b/ext/pitemp.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/pitemp --bcm-pin 17 --log-level trace
+ExecStart=/usr/local/bin/pitemp --bcm-pin 17 --log-level debug
 
 [Install]
 WantedBy=multi-user.target
