--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "strudel"
 version = "0.1.0"
+authors = ["Nick Pillitteri"]
+description = "Export DHT22 temperature and humidity sensor readings as Prometheus metrics"
 homepage = "https://github.com/56quarters/strudel"
 repository = "https://github.com/56quarters/strudel"
+readme = "README.md"
 license = "GPL-3.0+"
 edition = "2021"
 
