--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "GPL-3.0+"
 edition = "2021"
 
 [dependencies]
-clap = { version = "3.0.0-rc.8", features = ["cargo", "derive", "std"], default-features = false }
+clap = { version = "3.0.4", features = ["cargo", "derive", "std"], default-features = false }
 rppal = "0.13.1"
 hyper = { version = "0.14.16", features = ["full"] }
 tokio = { version = "1.14.0", features = ["full"] }
