--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "https://github.com/56quarters/strudel"
 repository = "https://github.com/56quarters/strudel"
 readme = "README.md"
 license = "GPL-3.0+"
+keywords = ["dht22", "temperature", "hardware"]
 edition = "2021"
 
 [dependencies]
