Harden systemd unit a bit

--- a/ext/strudel.service
+++ b/ext/strudel.service
@@ -6,5 +6,14 @@ After=network.target
 Type=simple
 ExecStart=/usr/local/bin/strudel --bcm-pin 17 --log-level debug
 
+# Restrict what the service can do since it only needs the network and /dev
+NoNewPrivileges=yes
+PrivateTmp=yes
+ProtectSystem=strict
+ProtectHome=true
+ProtectControlGroups=yes
+ProtectKernelModules=yes
+ProtectKernelTunables=yes
+
 [Install]
 WantedBy=multi-user.target
