--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.0.4", features = ["cargo", "derive", "std"], default-features = false }
-rppal = "0.13.1"
-hyper = { version = "0.14.16", features = ["full"] }
-tokio = { version = "1.14.0", features = ["full"] }
 prometheus = { version = "0.13.0", features = ["process"] }
+rppal = "0.13.1"
+tokio = { version = "1.14.0", features = ["full"] }
 tracing = "0.1.29"
 tracing-subscriber = "0.3.5"
+warp = "0.3.2"
 
 [lib]
 name = "strudel"
