Switch to official Prometheus client library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.0.4", features = ["cargo", "derive", "std"], default-features = false }
-prometheus = { version = "0.13.0", features = ["process"] }
+prometheus-client = "0.16.0"
 rppal = "0.13.1"
 tokio = { version = "1.14.0", features = ["full"] }
 tracing = "0.1.29"
