--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,14 @@ keywords = ["dht22", "temperature", "hardware", "prometheus"]
 edition = "2021"
 
 [dependencies]
-clap = { version = "3.2.22", features = ["cargo", "derive", "std"], default-features = false }
-prometheus-client = "0.18.0"
+axum = "0.6.20"
+clap = { version = "4.1.8", features = ["cargo", "derive", "help", "error-context", "std", "usage", "wrap_help"], default_features = false }
+prometheus-client = "0.21.2"
 rppal = "0.13.1"
 tokio = { version = "1.14.0", features = ["full"] }
+tower-http = { version = "0.4.4", features = ["trace"] }
 tracing = "0.1.29"
 tracing-subscriber = "0.3.5"
-warp = "0.3.2"
 
 [lib]
 name = "strudel"
